apps/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: apps
spec:
  selector:
    app: paperless
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: ClusterIP
